# arsenal

./: CREDITS.md  Cargo.toml  README.md
examples/: playback.rs  plot-fft.rs  plot-waveform.rs
src/: lib.rs
